# next-django

./: .gitignore  README.md
frontend/: Makefile
frontend/.devcontainer/: devcontainer.json
frontend/app/: .env.sample  Makefile  auth.ts  instrumentation.ts  next.config.js  package-lock.json  package.json
frontend/app/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/components/: README.md
frontend/app/lib/: README.md
gateway/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
gateway/.devcontainer/: devcontainer.json  docker-compose.yml  install_pg_tools.sh  post-create.sh
gateway/app/: start.sh
gateway/app/app/: beat.py  celery.py  settings.py  urls.py
gateway/app/appaccount/: admin.py  api.py  apps.py
gateway/app/appaccount/migrations/: 0001_initial.py  0002_session.py  0003_alter_userprofile_gender_delete_gender.py  0004_alter_session_refresh_token.py
gateway/app/appaccount/models/: __init__.py  accounts.py  auths.py  profilemeta.py
gateway/app/appaccount/routes/: auths.py  users.py
gateway/app/appaccount/serializers/: auths.py  users.py
gateway/app/appaccount/services/: auths.py
gateway/app/appaccount/signals/: accounts.py
gateway/app/appcore/: apps.py
gateway/app/appcore/models/: commons.py
gateway/app/appcore/services/: auths.py  env_manager.py  gen_token.py  paginate_queryset.py  utils.py
gateway/app/appcore/tasks/: sample.py
gateway/app/appdemo/: api.py  apps.py
gateway/app/appdemo/routes/: demos.py
gateway/app/appdemo/serializers/: demos.py
(+37 files in other folders)
